--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                 <div class="item-prograph">
                     <span style="font-size: 20px; font-weight: 600; margin: 24px 0 18px 0;">Description</span>
-                    <p>Netflix is seeking a highly skilled and motivated Backend .NET Developer to join our talented engineering team. As a Backend .NET Developer, you will play a crucial role... <span style="color: #FF60A3; margin-left: 2px;">read more</span></p>
+                    <p>Netflix is seeking a highly skilled and motivated Backend .NET Developer to join our talented engineering team. As a Backend .NET Developer, you will play a crucial role... <span style="color: #FF60A3; margin-left: 2px; cursor: pointer;"><u>read more</u></span></p>
                 </div>
 
                 <img style="margin-top: 24px;" src="img/Line 40.png">
